x.y.z
=====

Release date:

New features:

Bug fixes:

0.13.0
======

Release date:

Mon, 06 Oct 2025 21:25:24 +0300

New features:

* Implement random velocity jitter in instrument settings

* Show track index in the track settings dialog

* Show track index in the track header tool tip

* Adjustable audio buffer size

* Adjustable track header font size

* Add tabs to track settings dialog

* Implement custom auto note-off offset
  - Auto note-off offset can be set per-instrument
  - Adds tabs to the track settings dialog

Bug fixes:

* Fix auto note-off offset calculation

* Fix binding loops in EditMidiCcAutomationsDelegate.qml

Other:

0.12.0
======

Release date:

Wed, 10 Sep 2025 21:27:00 +0300

New features:

* Experimental audio recoder
  - Just enable recording in `Settings => Audio` and Noteahead will record from the default
    audio source when the song starts and name the file according to active tracks

* Implement a note frequency dialog
  - Tools => Note Frequencies

* Improvements to column data selection
  - Allow selecting data across multiple columns (keyboard only for now)
  - Allow selecting data using the mouse

Bug fixes:

* Take transpose into account when playing live notes

* Play correct live note when editing velocity

Other:

0.11.0
======

Release date:

Fri, 29 Aug 2025 21:17:38 +0300

New features:

* Allow transposing by +2/-2 semitones

* Fix GitHub Issue #24: Implement velocity interpolation on track-level

Bug fixes:

* Fix GitHub Issue #21: Clicking on the empty area of a note column won't set focus

* Fix GitHub Issue #22: MIDI transport events sent event if disabled

0.10.0
======

Release date:

Mon, 21 Jul 2025 20:31:52 +0300

New features:

* Fix GitHub Issue #10: Implement support for a MIDI controller keyboard
  - Edit => Settings => MIDI => Controller
  - Supports Note ON/OFF, Pitch Bend, MIDI CC (also modulation wheel), Transport (Play/Stop)

* Implement MIDI transport events
  - Noteahead now sends MIDI Start/Stop
