@@ -5,6 +5,8 @@ Release date:
 
 New features:
 
+* Add a virtual keyboard to the instrument settings
+
 Bug fixes:
 
 0.13.0
